--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pagina de contacto: Envía consultas, cuéntanos tu experiencia con el juego, danos sugerencias para mejorar la página">
-    <meta name="keywords" content="Contacto, Heroes, Guía, Tips, Asesinos, Magos, Combatientes,Tiradores, Apoyos, Tanques, Sugerencias, Consultas">
+    <meta name="description"
+    content="Pagina de contacto: Envía consultas, cuéntanos tu experiencia con el juego, danos sugerencias para mejorar la página">
+    <meta name="keywords"
+    content="Contacto, Heroes, Guía, Tips, Asesinos, Magos, Combatientes,Tiradores, Apoyos, Tanques, Sugerencias, Consultas">
     <link rel="icon" type="x-icon" href="../media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Contact / Guía MLBB</title>
 </head>
+
 <body>
 
-    <header class="interior"> 
+    <header class="interior">
         <nav class="menu">
-            
             <input type="checkbox" id="check">
             <label for="check" class="menu-icon">
-                <i class='bx bx-menu ' style='color:#ffffff'  ></i>
+                <i class='bx bx-menu ' style='color:#ffffff'></i>
             </label>
-            
             <a href="../index.html" class="enlace">
                 <img class="logo" src="../media/logo.png" alt="logo">
             </a>
@@ -40,57 +43,63 @@
 
     <main>
         <!-- CONTACTO -->
-<h1>CONTACTO</h1>
-<div class="desarrollo">
-    <p class="texto-contacto">
-        Escribinos queremos conocerte, saber que opinas de la página, que te gustaría ver o que cambios harias. ¿Conoces el juego? ¿Cual es tu personaje favorito?
-    </p>
-    <p class="texto-contacto"></p>
-    <p class="texto-contacto">
-        Tu opinión nos interesa!
-    </p>
-</div>
-
-<div class="container">
-    <h2>DEJANOS TU MENSAJE</h2>
-    <form>
-        <div class="form-group">
-            <label for="nombre">Nombre:</label>
-            <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre">
+        <h1>CONTACTO</h1>
+        <div class="desarrollo">
+            <p class="texto-contacto">
+                Escribinos queremos conocerte, saber que opinas de la página, que te gustaría ver o que cambios harias.
+                ¿Conoces el juego? ¿Cual es tu personaje favorito?
+            </p>
+            <p class="texto-contacto"></p>
+            <p class="texto-contacto">
+                Tu opinión nos interesa!
+            </p>
         </div>
-        <div class="form-group">
-            <label for="apellido">Apellido:</label>
-            <input type="text" class="form-control" id="apellido" placeholder="Ingrese su Apellido">
+
+        <div class="container">
+            <h2>DEJANOS TU MENSAJE</h2>
+            <form>
+                <div class="form-group">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre">
+                </div>
+                <div class="form-group">
+                    <label for="apellido">Apellido:</label>
+                    <input type="text" class="form-control" id="apellido" placeholder="Ingrese su Apellido">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Ingrese su Email">
+                </div>
+                <div class="form-group">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea class="form-control tamaño" id="mensaje" rows="4"
+                    placeholder="Ingrese su mensaje"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary boton">Enviar</button>
+                <button type="reset" class="btn btn-secondary boton">Cancelar</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Ingrese su Email">
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <h3 class="juego"><a href="./contacto.html">MOBILE LEGENDS</a></h3>
+        <div class="contenedor-redes">
+            <a href="https://www.facebook.com/MobileLegendsGameES" target="_blank" class="icono-redes"><i
+            class='bx bxl-facebook'></i></a>
+            <a href="https://twitter.com/MobileLegendsOL" target="_blank" class="icono-redes"><i
+            class='bx bxl-twitter'></i></a>
+            <a href="https://www.instagram.com/mobilelegendsgame/" target="_blank" class="icono-redes"><i
+            class='bx bxl-instagram'></i></a>
+            <a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank" class="icono-redes"><i
+            class='bx bxl-tiktok'></i></a>
+            <a href="https://m.mobilelegends.com/en" class="icono-redes"><i class='bx bx-globe'></i></a>
         </div>
-        <div class="form-group">
-            <label for="mensaje">Mensaje:</label>
-            <textarea class="form-control tamaño" id="mensaje" rows="4" placeholder="Ingrese su mensaje"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary boton">Enviar</button>
-        <button type="reset" class="btn btn-secondary boton">Cancelar</button>
-    </form>
-</div>
-
-</main>
-
-
-
-<!-- FOOTER -->
-<footer>
-    <h3 class="juego"><a href="./contacto.html">MOBILE LEGENDS</a></h3>
-    <div class="contenedor-redes">
-        <a href="https://www.facebook.com/MobileLegendsGameES" target="_blank" class="icono-redes"><i class='bx bxl-facebook' ></i></a>
-        <a href="https://twitter.com/MobileLegendsOL" target="_blank" class="icono-redes"><i class='bx bxl-twitter' ></i></a>
-        <a href="https://www.instagram.com/mobilelegendsgame/" target="_blank" class="icono-redes"><i class='bx bxl-instagram' ></i></a>
-        <a href="https://www.tiktok.com/@mlbbttofficial?lang=en" target="_blank" class="icono-redes"><i class='bx bxl-tiktok' ></i></a>
-        <a href="https://m.mobilelegends.com/en" class="icono-redes"><i class='bx bx-globe'></i></a>
-    </div>
-    <span class="copyright">&copy;2023. VirginiaNardi. Página sin fines de lucro.</span>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
+        <span class="copyright">&copy;2023. VirginiaNardi. Página sin fines de lucro.</span>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
