--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,23 +57,24 @@
 
         <div class="container">
             <h2>DEJANOS TU MENSAJE</h2>
-            <form>
+            <form action="https://formspree.io/f/mdoragzq"
+            method="POST">
                 <div class="form-group">
                     <label for="nombre">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre">
+                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre" name="nombre" required>
                 </div>
                 <div class="form-group">
                     <label for="apellido">Apellido:</label>
-                    <input type="text" class="form-control" id="apellido" placeholder="Ingrese su Apellido">
+                    <input type="text" class="form-control" id="apellido" placeholder="Ingrese su Apellido" name="apellido" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingrese su Email">
+                    <input type="email" class="form-control" id="email" placeholder="Ingrese su Email" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="mensaje">Mensaje:</label>
                     <textarea class="form-control tamaño" id="mensaje" rows="4"
-                    placeholder="Ingrese su mensaje"></textarea>
+                    placeholder="Ingrese su mensaje" name="mensaje" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary boton">Enviar</button>
                 <button type="reset" class="btn btn-secondary boton">Cancelar</button>
